# Fortify-DD

./: .coverage  .env.example  .gitignore  .vercelignore  AGENTS.md  Fortify_DD_PRD.docx  Fortify_DD_PRD_v2.docx  LICENSE  README.md  coverage.json  demo_app.py  pyproject.toml  vercel.json
app/: __init__.py  config.py  main.py  schemas.py  store.py
app/agent/: __init__.py  pipeline.py  state.py
app/clients/: ai_ml.py  bright_data.py  claude.py  cognee.py  gemini.py  speechmatics.py  triggerware.py
app/services/: assessment_service.py  source_ranker.py
scratch/: crap_analysis.py
tests/: conftest.py  test_ai_ml_router.py  test_api.py  test_bright_data_client.py  test_claude_client.py  test_integration_api_flow.py  test_pipeline.py  test_schemas.py  test_source_ranker.py  test_store.py
