[project]
name = "fortify-dd"
version = "0.1.0"
description = "AI-powered vendor due diligence agent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.60",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0"
]

[project.scripts]
app = "app.main:app"

[project.optional-dependencies]
demo = [
  "streamlit>=1.41.0",
  "uvicorn[standard]>=0.30.0"
]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["logs*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "integration: tests that exercise multiple app layers through public interfaces"
]
